--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                        
                         <a href="mailto:me@leoyarto.com">me@leoyarto.com</a>
                     </div>
-                    <p class="lead mb-5">Hi! I am experienced in web and software developments. I apply agile methodologies to iterate product development focusing on business value. </p>
+                    <p class="lead mb-5">Hi! I am experienced in web and software development. I apply agile methodologies to iterate product development focusing on business value. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.facebook.com/lyarto"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/leo4"><i class="fab fa-github"></i></a>
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Programmer</h3>
                             <div class="subheading mb-3">C3ntro Telecom</div>
-                            <p>Develop end-user features for unified communications and internal monitoring tools.</p>
+                            <p>Developed end-user features for unified communications and internal monitoring tools.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2011 - 2015</span></div>
                     </div>
@@ -129,15 +129,17 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-vuejs"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
                         <li class="list-inline-item"><i class="fab fa-less"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-php"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -165,8 +167,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors.I'm an amateur runner. I enjoy running marathons as well as  kayaking.</p>
-                    <p class="mb-0">I also like to strum my guitar and play some mellow ballads.</p>
+                    <p>Apart from being a developer I enjoy spending most of my time  outdoors.I'm an amateur long distance runner with a marathon PR of 2:57:24. I also enjoy kayaking.</p>
+                    <p class="mb-0">When indoors, I like to strum my guitar and  read.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -178,7 +180,9 @@
                     <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Professional Scrum Developer (scrum.org)
-                        </li> <!--
+                            
+                        </li>
+                        <!--
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Web development
@@ -215,6 +219,7 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li> -->
                     </ul>
+                    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c6f84115-4c7f-4667-b337-e409bdf0f9d1" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
                 </div>
             </section>
         </div>
