fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">Hi! I am experienced in web and software development. I apply agile methodologies to iterate product development focusing on business value. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.facebook.com/lyarto"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/leonardo-yarto-67564959/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/leo4"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/leoyarto"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/lyarto"><i class="fab fa-facebook-f"></i></a>
